[gd_scene load_steps=15 format=3 uid="uid://blb2ritcjd41m"]

[ext_resource type="Script" uid="uid://dcm1wmyny2g3q" path="res://scenes/UI/level_choosing_scene.gd" id="1_34uql"]
[ext_resource type="Texture2D" uid="uid://cq51puelfq6nd" path="res://assets/backgrounds/Free Pixel Art Forest/PNG/Background layers/Layer_0009_2.png" id="1_hddtj"]
[ext_resource type="Texture2D" uid="uid://ckochnt0tlxx4" path="res://assets/backgrounds/Free Pixel Art Forest/PNG/Background layers/Layer_0006_4.png" id="2_34uql"]
[ext_resource type="Texture2D" uid="uid://npkj5lifxrwa" path="res://assets/backgrounds/Free Pixel Art Forest/PNG/Background layers/Layer_0003_6.png" id="3_eu47v"]
[ext_resource type="Texture2D" uid="uid://cwgx3ypl0vbgb" path="res://assets/backgrounds/Free Pixel Art Forest/PNG/Background layers/Layer_0004_Lights.png" id="4_llveg"]
[ext_resource type="Texture2D" uid="uid://b800plt24ly5y" path="res://assets/backgrounds/Free Pixel Art Forest/PNG/Background layers/Layer_0002_7.png" id="5_vwo83"]
[ext_resource type="FontFile" uid="uid://cgou02wgxyj4i" path="res://assets/fonts/ThaleahFat.ttf" id="6_dufh0"]
[ext_resource type="FontFile" uid="uid://ccpeu102rjqi4" path="res://assets/fonts/BoldPixels (1).ttf" id="7_au5p6"]
[ext_resource type="Texture2D" uid="uid://mdap8l0p5tbg" path="res://assets/buttons/20240707dragonHeaderB.png" id="8_jfmxd"]
[ext_resource type="Texture2D" uid="uid://c4cblb3f65xs0" path="res://assets/buttons/20240707dragonHeaderA.png" id="9_3snik"]
[ext_resource type="Texture2D" uid="uid://d38chw5bsyf17" path="res://assets/UI/Level/Button/Unlocked/Default.png" id="9_eu47v"]

[sub_resource type="Theme" id="Theme_hddtj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_34uql"]
texture = ExtResource("8_jfmxd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eu47v"]
texture = ExtResource("9_3snik")

[node name="LevelChoosing" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_34uql")

[node name="Back2" type="Node" parent="."]

[node name="Layer00092" type="Sprite2D" parent="Back2"]
position = Vector2(124.183, -12.8472)
scale = Vector2(0.302119, 0.302119)
texture = ExtResource("1_hddtj")

[node name="Layer00064" type="Sprite2D" parent="Back2"]
position = Vector2(125.318, -20.8739)
scale = Vector2(0.365382, 0.365382)
texture = ExtResource("2_34uql")

[node name="Layer00036" type="Sprite2D" parent="Back2"]
position = Vector2(189, -25)
scale = Vector2(0.373831, 0.373831)
texture = ExtResource("3_eu47v")

[node name="Layer00037" type="Sprite2D" parent="Back2"]
position = Vector2(133, -27)
scale = Vector2(0.398524, 0.398525)
texture = ExtResource("3_eu47v")

[node name="Layer0004Lights" type="Sprite2D" parent="Back2"]
position = Vector2(94, -14)
scale = Vector2(0.204741, 0.204741)
texture = ExtResource("4_llveg")

[node name="Layer0004Lights2" type="Sprite2D" parent="Back2"]
position = Vector2(207, -15)
scale = Vector2(0.204741, 0.204741)
texture = ExtResource("4_llveg")

[node name="Layer00027" type="Sprite2D" parent="Back2"]
position = Vector2(118, 149)
scale = Vector2(0.264278, 0.264278)
texture = ExtResource("5_vwo83")

[node name="CanvasGroup" type="CanvasLayer" parent="."]

[node name="CanvasGroup" type="Panel" parent="CanvasGroup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasGroup/CanvasGroup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.49803922)

[node name="Name" type="Label" parent="CanvasGroup/CanvasGroup"]
top_level = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_right = 60.0
offset_bottom = 47.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_dufh0")
theme_override_font_sizes/font_size = 48
text = "LEVEL"

[node name="Button" type="VBoxContainer" parent="CanvasGroup/CanvasGroup"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -109.0
offset_right = 50.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Line1" type="HBoxContainer" parent="CanvasGroup/CanvasGroup/Button"]
layout_mode = 2
alignment = 1

[node name="Level01" type="Button" parent="CanvasGroup/CanvasGroup/Button/Line1"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("7_au5p6")
text = "1"
icon = ExtResource("9_eu47v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Level02" type="Button" parent="CanvasGroup/CanvasGroup/Button/Line1"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("7_au5p6")
text = "2"
icon = ExtResource("9_eu47v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Level03" type="Button" parent="CanvasGroup/CanvasGroup/Button/Line1"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("7_au5p6")
text = "3"
icon = ExtResource("9_eu47v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Line2" type="HBoxContainer" parent="CanvasGroup/CanvasGroup/Button"]
layout_mode = 2
alignment = 1

[node name="Level04" type="Button" parent="CanvasGroup/CanvasGroup/Button/Line2"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("7_au5p6")
text = "4"
icon = ExtResource("9_eu47v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Level05" type="Button" parent="CanvasGroup/CanvasGroup/Button/Line2"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("7_au5p6")
text = "5"
icon = ExtResource("9_eu47v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Level06" type="Button" parent="CanvasGroup/CanvasGroup/Button/Line2"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("7_au5p6")
text = "6"
icon = ExtResource("9_eu47v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ButtonBack" type="Button" parent="CanvasGroup/CanvasGroup/Button"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_hddtj")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_au5p6")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxTexture_34uql")
theme_override_styles/hover = SubResource("StyleBoxTexture_eu47v")
text = "Back"

[connection signal="pressed" from="CanvasGroup/CanvasGroup/Button/Line1/Level01" to="." method="_on_level_01_pressed"]
[connection signal="pressed" from="CanvasGroup/CanvasGroup/Button/Line1/Level02" to="." method="_on_level_02_pressed"]
[connection signal="pressed" from="CanvasGroup/CanvasGroup/Button/Line1/Level03" to="." method="_on_level_03_pressed"]
[connection signal="pressed" from="CanvasGroup/CanvasGroup/Button/Line2/Level04" to="." method="_on_level_04_pressed"]
[connection signal="pressed" from="CanvasGroup/CanvasGroup/Button/Line2/Level05" to="." method="_on_level_05_pressed"]
[connection signal="pressed" from="CanvasGroup/CanvasGroup/Button/Line2/Level06" to="." method="_on_level_06_pressed"]
[connection signal="pressed" from="CanvasGroup/CanvasGroup/Button/ButtonBack" to="." method="_on_button_back_pressed"]
